[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/player_unit.gd" id=1]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.25
height = 0.9

[sub_resource type="SphereMesh" id=2]
radius = 0.2

[sub_resource type="CapsuleMesh" id=3]
radius = 0.08
height = 0.6

[sub_resource type="CapsuleMesh" id=4]
radius = 0.1
height = 0.7

[node name="PlayerUnit" type="Node3D"]
script = ExtResource(1)

[node name="Model" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="Model"]
mesh = SubResource(1)
position = Vector3(0, 0.55, 0)

[node name="Head" type="MeshInstance3D" parent="Model"]
mesh = SubResource(2)
position = Vector3(0, 1.2, 0)

[node name="ArmL" type="MeshInstance3D" parent="Model"]
mesh = SubResource(3)
position = Vector3(-0.35, 0.75, 0)

[node name="ArmR" type="MeshInstance3D" parent="Model"]
mesh = SubResource(3)
position = Vector3(0.35, 0.75, 0)

[node name="LegL" type="MeshInstance3D" parent="Model"]
mesh = SubResource(4)
position = Vector3(-0.15, 0.2, 0)

[node name="LegR" type="MeshInstance3D" parent="Model"]
mesh = SubResource(4)
position = Vector3(0.15, 0.2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
